Bug 165717 - FILEOPEN RTF page break and continuous section break not handled before table
Summary: FILEOPEN RTF page break and continuous section break not handled before table
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
unspecified
Hardware: All All
: medium normal
Assignee: Oliver Specht (CIB)
URL:
Whiteboard: target:25.8.0
Keywords:
Depends on:
Blocks: RTF-Opening
  Show dependency treegraph
 
Reported: 2025-03-13 10:06 UTC by Oliver Specht (CIB)
Modified: 2025-07-31 08:35 UTC (History)
1 user (show)

See Also:
Crash report or crash signature:


Attachments
page break and continuous section break followed by a table (130.31 KB, application/msword)
2025-03-13 10:06 UTC, Oliver Specht (CIB)
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Oliver Specht (CIB) 2025-03-13 10:06:33 UTC
Created attachment 199792 [details]
page break and continuous section break followed by a table

In RTF documents that contain a page break '\page' followed a continuous section break '\sbknone' there is code to insert a section to import a possible column setting and after that a change of the page layout is applied to the previous page break attribute.

If there is a table right after the page break then insertion of the section fails because selections from tables to normal text are currently not supported. 

Due to that also the page style is not applied.

A page number restart '\pgnrestart'is never applied here.
Comment 1 Commit Notification 2025-03-18 10:46:50 UTC
Oliver Specht committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/a2a88f0073bdd5119745679daa61469e87002579

tdf#165717, tdf#165718 additional hack to apply continuous section breaks

It will be available in 25.8.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 2 Gabor Kelemen (Collabora) 2025-03-24 14:54:52 UTC
Verified in

Version: 25.8.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: a2741c9e6083016bba82fa9be06e157a18aaaf07
CPU threads: 14; OS: Windows 10 X86_64 (build 19045); UI render: Skia/Raster; VCL: win
Locale: hu-HU (hu_HU); UI: en-US
Calc: threaded

now the document has 2 pages plus one automatically inserted blank.