tdf#165717, tdf#165718 additional hack to apply continuous section breaks

Keeps reference to range in front of the current range to
apply page style to an already available page break in cases
where the section starts with a table.
Page number restart is also applied in the old and the new code.
Remove of dummy section paragraphs introduced with
b696600821d8aafb63b6a88016d299ef89478f56 is now only performed
if it is no RTF import.

This causes:

  Test name: testHiddenParaBreaks::TestBody
  equality assertion failed
  - Expected: 3
  - Actual  : 4
  - In <>, XPath '/root/page[2]/body/txt' number of nodes is incorrect

But the file is not imported correctly anyway and this is actually
fixing a bug, so adapt the test file.

  rtfimport.cxx:910:Assertion
  Test name: (anonymous namespace)::testContSectionPageBreak::TestBody
  equality assertion failed
  - Expected: THIRD
  - Actual  :

The problem here is that the extra paragraph that is inserted for \sect
if m_bIgnoreNextContSectBreak is now wrong as it was previously removed
but no longer is, so don't insert the extra paragraph any more.

But leave the extra paragraph in case it's a frame, otherwise we get:

  rtfexport8.cxx:91:(anonymous namespace)::testTdf158586_0::TestBody
  equality assertion failed
  - Expected: 1
  - Actual  : 2

testTd112202 fails, but Oliver says that extra page 6 is an improvement.

Change-Id: Ie9a22f00e75c797762f52e6b865e32002051988c
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/183084
Reviewed-by: Thorsten Behrens <thorsten.behrens@allotropia.de>
Tested-by: allotropia jenkins <jenkins@allotropia.de>